[bugfix] Ensure that  favorite, reply and unfavorite button is visible on hover

--- a/redux/src/main/renderer/stylesheets/blocks/_Tweets.scss
+++ b/redux/src/main/renderer/stylesheets/blocks/_Tweets.scss
@@ -39,7 +39,7 @@
       margin-left: 2px;
       visibility: hidden;
 
-      .tweet:hover & {
+      .Tweet:hover & {
         visibility: inherit;
       }
     }
